[tool.poetry]
name = "phoenix"
version = "0.1.0"
description = ""
authors = ["Alasdair <alnessy@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
multipledispatch = "^0.6.0"
attrs = "^20.3.0"
janus = "^0.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.0"
snakeviz = "^2.1.0"
black = {version = "^20.8b1", allow-prereleases = true}

[tool.poetry.scripts]
main = "phoenix.main:main"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
