[tool.poetry]
name = "factorial"
version = "0.1.0"
description = ""
authors = ["Alasdair Colley <alnessy@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
phoenix = { path = "../..", develop = true }

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
cluster = "factorial.cluster:main"
api = "factorial.api:main"
factorial = "factorial.factorial:main"

