[tool.poetry]
name = "gauge"
version = "0.1.0"
description = ""
authors = ["Alasdair <alnessy@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
phoenix = { path = "../..", develop = true }
attrs = "^19.3.0"
multipledispatch = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pytest-asyncio = "^0.14.0"

[tool.poetry.scripts]
gauge = "gauge:main"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
