[tool.poetry]
name = "remote"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
phoenix = { path = "../.." }
multipledispatch = "^0.6.0"
asyncssh = "^2.5.0"
attrs = "^20.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
run = "remote:main"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
