[tool.poetry]
name = "webapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
phoenix = { path = "../.." }
aiohttp = "^3.7.4"
attrs = "^20.3.0"
multipledispatch = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}

[tool.poetry.scripts]
main = "webapi.api:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
